force-app/main/default/objects/Security__c/fields/Accrual_Frequency_Months__c.field-meta.xml
<CustomField>
    <fullName>Accrual_Frequency_Months__c</fullName>
    <label>Accrual Frequency (months)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>