force-app/main/default/objects/Security__c/fields/Book_Value__c.field-meta.xml
<CustomField>
    <fullName>Book_Value__c</fullName>
    <description>The quotient of dividing the company&apos;s net asset value (the company&apos;s book value) by the number of issued shares outstanding.</description>
    <label>Book Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>