force-app/main/default/objects/Security__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company Name</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>Securities</relationshipLabel>
    <relationshipName>Securities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>