force-app/main/default/objects/Security__c/fields/Date_of_Accrual_of_Dividends__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Accrual_of_Dividends__c</fullName>
    <label>Date of Accrual of Dividends</label>
    <type>Date</type>
</CustomField>