force-app/main/default/objects/Security__c/fields/Issue_Value__c.field-meta.xml
<CustomField>
    <fullName>Issue_Value__c</fullName>
    <description>the price of shares at their initial placement at which the first holder purchased it. Typically, the issue price of a share is greater than or equal to its par value.</description>
    <label>Issue Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>