force-app/main/default/objects/Security__c/fields/Market_Price__c.field-meta.xml
<CustomField>
    <fullName>Market_Price__c</fullName>
    <description>This is the price at which a stock is bought and sold on the secondary market.</description>
    <label>Market Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>