force-app/main/default/objects/Security__c/fields/Nominal_Cost__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Cost__c</fullName>
    <description>what is indicated on its front side (sometimes called face value). The total amount of the authorized capital is equal to the total par value of all issued shares.</description>
    <label>Nominal Cost</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>