force-app/main/default/objects/Security__c/fields/Quantity_on_Balance__c.field-meta.xml
<CustomField>
    <fullName>Quantity_on_Balance__c</fullName>
    <label>Quantity on Balance</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>