force-app/main/default/objects/Security__c/fields/Validity_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Validity_Period_Months__c</fullName>
    <label>Validity Period (Months)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>