force-app/main/default/objects/Security__c/recordTypes/Bond.recordType-meta.xml
<RecordType>
    <fullName>Bond</fullName>
    <active>true</active>
    <description>a debt security whose owner has the right to receive its face value in cash or property on a due date from the issuer (the issuer)</description>
    <label>Bond</label>
</RecordType>