force-app/main/default/objects/Security__c/recordTypes/Share.recordType-meta.xml
<RecordType>
    <fullName>Share</fullName>
    <active>true</active>
    <description>security, share of ownership of a company, securing the rights of its owner (shareholder) to receive part of the profit in the form of dividends</description>
    <label>Share</label>
</RecordType>